try max-width white space fix

--- a/src/assets/scss/components/_navbar.scss
+++ b/src/assets/scss/components/_navbar.scss
@@ -12,7 +12,10 @@
   .navbar-brand {
     font-family: $font-family-base;
     letter-spacing: 0;
-    white-space: normal;
+    
+    @media (max-width: 992px) { {
+      white-space: normal;
+    }
   }
 
   .navbar-nav {
@@ -54,11 +57,6 @@
 // custom styles for regular navbar with expand option
 @each $breakpoint_name in map-keys($grid-breakpoints) {
   @include media-breakpoint-up($breakpoint_name) {
-    .navbar {
-      .navbar-brand {
-        white-space: nowrap;  
-      }
-    }
     .navbar-expand#{breakpoint-infix($breakpoint_name)} {
       padding-top: 0;
       padding-bottom: 0;
